--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body{
   max-width: 1440px;
   margin: auto;
@@ -12,5 +8,81 @@ body{
 }
 *{
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a{
+  color:unset;
+  text-decoration: none;
+  cursor: pointer;
+}
+li{
+  list-style: none;
 }
 
+
+
+/* NotFound Page */
+.notfound{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 72vh;
+  justify-content: center;
+  align-items: center;
+  gap:16px
+}
+.notfound h1{
+  font-size: 22px;
+  color: #42446E;
+  font-weight: 500;
+}
+.buttondiv{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.buttondiv a{
+  background-color: #42446E;
+  border-radius: 6px;
+  color: white;
+  margin: 16px 0;
+  padding: 8px 16px;
+  font-size: 14px;
+}
+.buttondiv a:hover{
+  background-color: #666666;
+}
+
+
+
+
+@media only screen and (min-width:640px){
+  .notfound h1{
+    font-size: 24px;
+  }
+  .buttondiv a{
+    font-size: 16px;
+  }
+}
+@media only screen and (min-width:768px){
+  .notfound h1{
+    font-size: 28px;
+  }
+  
+}
+@media only screen and (min-width:1024px){
+  .notfound h1{
+    font-size: 32px;
+  }
+  .buttondiv a{
+    font-size: 18px;
+  }
+}
+@media only screen and (min-width:1280px){
+  .notfound h1{
+    font-size: 34px;
+  }
+}
